--- a/app/src/main/res/layout/cardrow.xml
+++ b/app/src/main/res/layout/cardrow.xml
@@ -28,6 +28,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_weight="1"
+                android:fontFamily="casual"
                 android:gravity="center"
                 android:text="TextView"
                 android:textSize="34sp" />
@@ -37,9 +38,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="160dp"
                 android:layout_weight="0.3"
+                android:fontFamily="casual"
                 android:gravity="center"
                 android:text="TextView"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                android:textStyle="bold" />
         </LinearLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
